Pull request #354: mtokar-MCA-3028_rename_personalization_worker
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-3028_rename_personalization_worker to master

Squashed commit of the following:

commit d2a73ef3d4eb287bea42db82e396a0ade80e7369
Merge: 00c6f8dc d3360997
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu Jun 15 11:59:51 2023 +0200

    Merge remote-tracking branch 'origin/master' into mtokar-MCA-3028_rename_personalization_worker

    # Conflicts:
    #	infobip-rtc-ui/src/main/res/values-ar/strings.xml
    #	infobip-rtc-ui/src/main/res/values-cs/strings.xml
    #	infobip-rtc-ui/src/main/res/values-da/strings.xml
    #	infobip-rtc-ui/src/main/res/values-de/strings.xml
    #	infobip-rtc-ui/src/main/res/values-es/strings.xml
    #	infobip-rtc-ui/src/main/res/values-fi-rFI/strings.xml
    #	infobip-rtc-ui/src/main/res/values-fr/strings.xml
    #	infobip-rtc-ui/src/main/res/values-hi/strings.xml
    #	infobip-rtc-ui/src/main/res/values-hr/strings.xml
    #	infobip-rtc-ui/src/main/res/values-hu/strings.xml
    #	infobip-rtc-ui/src/main/res/values-in/strings.xml
    #	infobip-rtc-ui/src/main/res/values-it/strings.xml
    #	infobip-rtc-ui/src/main/res/values-iw/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ja/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ko/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ms/strings.xml
    #	infobip-rtc-ui/src/main/res/values-nl/strings.xml
    #	infobip-rtc-ui/src/main/res/values-pl/strings.xml
    #	infobip-rtc-ui/src/main/res/values-pt/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ro/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ru/strings.xml
    #	infobip-rtc-ui/src/main/res/values-sk/strings.xml
    #	infobip-rtc-ui/src/main/res/values-sv/strings.xml
    #	infobip-rtc-ui/src/main/res/values-th/strings.xml
    #	infobip-rtc-ui/src/main/res/values-tr/strings.xml
    #	infobip-rtc-ui/src/main/res/values-uk/strings.xml
    #	infobip-rtc-ui/src/main/res/values-vi/strings.xml

--- a/infobip-rtc-ui/src/main/res/values-cs/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-cs/strings.xml
@@ -29,4 +29,6 @@
     <string name="mm_in_call">Probíhající hovor</string>
     <string name="mm_notification_permission_required_declining_call">Chybí oprávnění k oznámení. Odmítam příchozí hovor.</string>
     <string name="mm_your_microphone_is_muted">Váš mikrofon je ztlumený</string>
+    <string name="mm_call_registration_notification_channel">Registrace hovoru</string>
+    <string name="mm_call_registration_notification_description">Aktualizace uživatelských dat</string>
 </resources>
