--- a/infobip-rtc-ui/src/main/res/values-ms/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ms/strings.xml
@@ -29,4 +29,6 @@
     <string name="mm_in_call">Dalam panggilan</string>
     <string name="mm_notification_permission_required_declining_call">Kebenaran pemberitahuan tiada. Menolak panggilan masuk.</string>
     <string name="mm_your_microphone_is_muted">Mikrofon anda diredamkan</string>
+    <string name="mm_call_registration_notification_channel">Pendaftaran panggilan</string>
+    <string name="mm_call_registration_notification_description">Mengemas kini data pengguna</string>
 </resources>
