--- a/infobip-rtc-ui/src/main/res/values-ru/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ru/strings.xml
@@ -29,4 +29,6 @@
     <string name="mm_in_call">Во время разговора</string>
     <string name="mm_notification_permission_required_declining_call">Отсутствует разрешение на уведомление. Отклонение входящего вызова.</string>
     <string name="mm_your_microphone_is_muted">Ваш микрофон отключен</string>
+    <string name="mm_call_registration_notification_channel">Регистрация звонков</string>
+    <string name="mm_call_registration_notification_description">Обновление пользовательских данных</string>
 </resources>
