--- a/infobip-rtc-ui/src/main/res/values-zh-rSG/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-zh-rSG/strings.xml
@@ -29,4 +29,6 @@
     <string name="mm_screen_sharing_description">您的屏幕已共享</string>
     <string name="mm_notification_permission_required_declining_call">缺少通知權限。 拒絕來電。</string>
     <string name="mm_your_microphone_is_muted">您的麥克風已靜音</string>
+    <string name="mm_call_registration_notification_channel">來電登記</string>
+    <string name="mm_call_registration_notification_description">更新用戶數據</string>
 </resources>
