--- a/infobip-rtc-ui/src/main/res/values-ar/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ar/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="mm_accept">قبول</string>
     <string name="mm_decline">رفض</string>
@@ -28,5 +27,7 @@
     <string name="mm_screen_sharing_description">شاشتك مشتركة</string>
     <string name="mm_in_call">في المكالمة</string>
     <string name="mm_notification_permission_required_declining_call">إذن الإعلام مفقود. رفض المكالمة الواردة.</string>
+    <string name="mm_call_registration_notification_channel">تسجيل المكالمات</string>
+    <string name="mm_call_registration_notification_description">تحديث بيانات المستخدم</string>
     <string name="mm_your_microphone_is_muted">تم كتم صوت الميكروفون</string>
 </resources>
