--- a/infobip-rtc-ui/src/main/res/values-de/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-de/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="mm_accept">Annehmen</string>
     <string name="mm_decline">Abfall</string>
@@ -28,5 +27,7 @@
     <string name="mm_screen_sharing_description">Ihr Bildschirm wird freigegeben</string>
     <string name="mm_in_call">In einem Telefongesprach</string>
     <string name="mm_notification_permission_required_declining_call">Fehlende Benachrichtigungsberechtigung. Ablehnender eingehender Anruf.</string>
+    <string name="mm_call_registration_notification_channel">Anrufregistrierung</string>
+    <string name="mm_call_registration_notification_description">Benutzerdaten aktualisieren</string>
     <string name="mm_your_microphone_is_muted">Ihr Mikrofon ist stummgeschaltet</string>
 </resources>
