--- a/infobip-rtc-ui/src/main/res/values-fr/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-fr/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="mm_accept">Accepter</string>
     <string name="mm_decline">Déclin</string>
@@ -28,5 +27,7 @@
     <string name="mm_screen_sharing_description">Votre écran est partagé</string>
     <string name="mm_in_call">En appel</string>
     <string name="mm_notification_permission_required_declining_call">Autorisation de notification manquante. Refuser l\'appel entrant.</string>
+    <string name="mm_call_registration_notification_channel">Enregistrement d\'appel</string>
+    <string name="mm_call_registration_notification_description">Mise à jour des données utilisateur</string>
     <string name="mm_your_microphone_is_muted">Votre micro est coupé</string>
 </resources>
