--- a/infobip-rtc-ui/src/main/res/values-iw/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-iw/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="mm_accept">לְקַבֵּל</string>
     <string name="mm_decline">יְרִידָה</string>
@@ -28,5 +27,7 @@
     <string name="mm_screen_sharing_description">המסך שלך משותף</string>
     <string name="mm_in_call">בשיחה</string>
     <string name="mm_notification_permission_required_declining_call">חסרה הרשאת הודעה. דחיית שיחה נכנסת.</string>
+    <string name="mm_call_registration_notification_channel">רישום שיחות</string>
+    <string name="mm_call_registration_notification_description">עדכון נתוני משתמש</string>
     <string name="mm_your_microphone_is_muted">המיקרופון שלך מושתק</string>
 </resources>
