--- a/infobip-rtc-ui/src/main/res/values-ja/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ja/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="mm_accept">承認</string>
     <string name="mm_decline">却下</string>
@@ -28,5 +27,7 @@
     <string name="mm_screen_sharing_description">あなたの画面は共有されています</string>
     <string name="mm_in_call">通話中</string>
     <string name="mm_notification_permission_required_declining_call">通知権限がありません。 着信を拒否します。</string>
+    <string name="mm_call_registration_notification_channel">通話登録</string>
+    <string name="mm_call_registration_notification_description">ユーザーデータの更新</string>
     <string name="mm_your_microphone_is_muted">マイクがミュートになっています</string>
 </resources>
