--- a/infobip-rtc-ui/src/main/res/values-nl/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-nl/strings.xml
@@ -29,4 +29,6 @@
     <string name="mm_in_call">In een gesprek</string>
     <string name="mm_notification_permission_required_declining_call">Ontbrekende machtiging voor meldingen. Inkomende oproep weigeren.</string>
     <string name="mm_your_microphone_is_muted">Je microfoon is gedempt</string>
+    <string name="mm_call_registration_notification_channel">Bel registratie</string>
+    <string name="mm_call_registration_notification_description">Gebruikersgegevens bijwerken</string>
 </resources>
