--- a/infobip-rtc-ui/src/main/res/values-pl/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-pl/strings.xml
@@ -29,4 +29,6 @@
     <string name="mm_in_call">W rozmowie</string>
     <string name="mm_notification_permission_required_declining_call">Brak uprawnień do powiadomień. Odrzucanie połączenia przychodzącego.</string>
     <string name="mm_your_microphone_is_muted">Twój mikrofon jest wyciszony</string>
+    <string name="mm_call_registration_notification_channel">Rejestracja połączeń</string>
+    <string name="mm_call_registration_notification_description">Aktualizacja danych użytkownika</string>
 </resources>
