--- a/infobip-rtc-ui/src/main/res/values-pt/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-pt/strings.xml
@@ -29,4 +29,6 @@
     <string name="mm_in_call">Numa chamada</string>
     <string name="mm_notification_permission_required_declining_call">Permissão de notificação ausente. Recusando chamada recebida.</string>
     <string name="mm_your_microphone_is_muted">Seu microfone está mudo</string>
+    <string name="mm_call_registration_notification_channel">Registro de chamadas</string>
+    <string name="mm_call_registration_notification_description">Atualizando dados do usuário</string>
 </resources>
