--- a/infobip-rtc-ui/src/main/res/values-sv/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-sv/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="mm_accept">Acceptera</string>
     <string name="mm_decline">Nedgång</string>
@@ -29,4 +28,6 @@
     <string name="mm_in_call">I ett samtal</string>
     <string name="mm_notification_permission_required_declining_call">Aviseringsbehörighet saknas. Avvisar inkommande samtal.</string>
     <string name="mm_your_microphone_is_muted">Din mikrofon är avstängd</string>
+    <string name="mm_call_registration_notification_channel">Ring registrering</string>
+    <string name="mm_call_registration_notification_description">Uppdaterar användardata</string>
 </resources>
