--- a/infobip-rtc-ui/src/main/res/values-th/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-th/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="mm_accept">ยอมรับ</string>
     <string name="mm_decline">ปฏิเสธ</string>
@@ -28,5 +27,7 @@
     <string name="mm_screen_sharing_description">หน้าจอของคุณถูกแชร์</string>
     <string name="mm_in_call">ในการโทร</string>
     <string name="mm_notification_permission_required_declining_call">ไม่มีสิทธิ์การแจ้งเตือน ปฏิเสธสายเรียกเข้า</string>
+    <string name="mm_call_registration_notification_channel">โทรลงทะเบียน</string>
+    <string name="mm_call_registration_notification_description">กำลังอัปเดตข้อมูลผู้ใช้</string>
     <string name="mm_your_microphone_is_muted">ไมโครโฟนของคุณปิดอยู่</string>
 </resources>
