--- a/infobip-rtc-ui/src/main/res/values-uk/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-uk/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="mm_accept">прийняти</string>
     <string name="mm_decline">відхилити</string>
@@ -28,5 +27,7 @@
     <string name="mm_screen_sharing_description">Ваш екран спільний</string>
     <string name="mm_in_call">У дзвінку</string>
     <string name="mm_notification_permission_required_declining_call">Відсутній дозвіл на сповіщення. Відхилення вхідного дзвінка.</string>
+    <string name="mm_call_registration_notification_channel">Реєстрація дзвінка</string>
+    <string name="mm_call_registration_notification_description">Оновлення даних користувача</string>
     <string name="mm_your_microphone_is_muted">Ваш мікрофон вимкнено</string>
 </resources>
