--- a/infobip-rtc-ui/src/main/res/values-zh-rCN/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="mm_accept">接受</string>
     <string name="mm_decline">拒绝</string>
@@ -9,7 +8,6 @@
     <string name="mm_speaker">扬声器</string>
     <string name="mm_microphone">麦克风</string>
     <string name="mm_screen_share">屏幕共享</string>
-    <string name="mm_in_call">通话中</string>
     <string name="mm_calls_notification_channel">来电</string>
     <string name="mm_in_call_notification_channel">通话中</string>
     <string name="mm_is_calling">正在打电话</string>
@@ -27,6 +25,9 @@
     <string name="mm_video_permission_required">视频通话需要摄像头权限。</string>
     <string name="mm_screen_sharing">屏幕共享</string>
     <string name="mm_screen_sharing_description">您的屏幕已共享</string>
+    <string name="mm_in_call">通话中</string>
     <string name="mm_notification_permission_required_declining_call">缺少通知權限。 拒絕來電。</string>
+    <string name="mm_call_registration_notification_channel">来电登记</string>
+    <string name="mm_call_registration_notification_description">更新用户数据</string>
     <string name="mm_your_microphone_is_muted">您的麦克风已静音</string>
 </resources>
