Pull request #355: mtokar-MCA-2909_albanian_lang_missing_strings
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-2909_albanian_lang_missing_strings to master

Squashed commit of the following:

commit 02a35151da73a52593f0d41455d87eadf6dc18f4
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Jun 16 13:29:30 2023 +0200

    missing strings for albanian lang
    string keys ordered by alphabet

--- a/infobip-rtc-ui/src/main/res/values-sq/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-sq/strings.xml
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="utf-8" standalone="no"?>
-<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<resources>
     <string name="mm_accept">Pranoje</string>
     <string name="mm_audio_permission_required">Kërkohet leje audio për të trajtuar telefonatat.</string>
     <string name="mm_call_finished">Telefonata përfundoi</string>
+    <string name="mm_call_registration_notification_channel">Regjistrimi i thirrjeve</string>
+    <string name="mm_call_registration_notification_description">Përditësimi i të dhënave të përdoruesit</string>
     <string name="mm_call_weak_internet_connection">Rrjeti juaj po shkakton cilësi të dobët të thirrjeve</string>
     <string name="mm_calls_notification_channel">Thirrjet</string>
     <string name="mm_cancel">Anulo</string>
@@ -16,6 +18,7 @@
     <string name="mm_microphone">Mikrofoni</string>
     <string name="mm_microphone_muted">I heshtur</string>
     <string name="mm_mute">Memec</string>
+    <string name="mm_notification_permission_required_declining_call">Mungon leja e njoftimit. Refuzimi i thirrjes hyrëse.</string>
     <string name="mm_ok">Ne rregull</string>
     <string name="mm_screen_share">Ndarjen e ekranit</string>
     <string name="mm_screen_sharing">Ndarjen e ekranit</string>
