--- a/infobip-rtc-ui/src/main/res/values-vi/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-vi/strings.xml
@@ -1,34 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <resources>
     <string name="mm_accept">Chấp nhận</string>
-    <string name="mm_decline">Từ chối</string>
-    <string name="mm_cancel">Hủy bỏ</string>
-    <string name="mm_ok">Được</string>
-    <string name="mm_video_call">Cuộc gọi video</string>
-    <string name="mm_flip_camera">Máy ảnh lật</string>
-    <string name="mm_speaker">Loa</string>
-    <string name="mm_microphone">Cái mic cờ rô</string>
-    <string name="mm_screen_share">Chia sẻ màn hình</string>
-    <string name="mm_calls_notification_channel">Cuộc gọi</string>
-    <string name="mm_in_call_notification_channel">Đang gọi</string>
-    <string name="mm_is_calling">đang gọi</string>
-    <string name="mm_incoming_call">Cuộc gọi đến</string>
-    <string name="mm_unknown">không xác định</string>
-    <string name="mm_call_finished">Cuộc gọi đã kết thúc</string>
     <string name="mm_audio_permission_required">Quyền âm thanh được yêu cầu để xử lý cuộc gọi.</string>
-    <string name="mm_call_weak_internet_connection">Mạng của bạn đang gây ra chất lượng cuộc gọi kém</string>
-    <string name="mm_microphone_muted">Đã tắt tiếng</string>
-    <string name="mm_unknown_error">Lỗi không rõ</string>
-    <string name="mm_unmute">Bật tiếng</string>
-    <string name="mm_mute">Tắt tiếng</string>
-    <string name="mm_video">Video</string>
-    <string name="mm_hangup">Treo lên</string>
-    <string name="mm_video_permission_required">Cần có sự cho phép của máy ảnh đối với các cuộc gọi điện video.</string>
-    <string name="mm_screen_sharing">Chia sẻ màn hình</string>
-    <string name="mm_screen_sharing_description">Màn hình của bạn được chia sẻ</string>
-    <string name="mm_in_call">Trong một cuộc gọi</string>
-    <string name="mm_notification_permission_required_declining_call">Thiếu quyền thông báo. Đang từ chối cuộc gọi đến.</string>
-    <string name="mm_your_microphone_is_muted">Micrô của bạn bị tắt tiếng</string>
+    <string name="mm_call_finished">Cuộc gọi đã kết thúc</string>
     <string name="mm_call_registration_notification_channel">đăng ký cuộc gọi</string>
     <string name="mm_call_registration_notification_description">Cập nhật dữ liệu người dùng</string>
+    <string name="mm_call_weak_internet_connection">Mạng của bạn đang gây ra chất lượng cuộc gọi kém</string>
+    <string name="mm_calls_notification_channel">Cuộc gọi</string>
+    <string name="mm_cancel">Hủy bỏ</string>
+    <string name="mm_decline">Từ chối</string>
+    <string name="mm_flip_camera">Máy ảnh lật</string>
+    <string name="mm_hangup">Treo lên</string>
+    <string name="mm_in_call">Trong một cuộc gọi</string>
+    <string name="mm_in_call_notification_channel">Đang gọi</string>
+    <string name="mm_incoming_call">Cuộc gọi đến</string>
+    <string name="mm_is_calling">đang gọi</string>
+    <string name="mm_microphone">Cái mic cờ rô</string>
+    <string name="mm_microphone_muted">Đã tắt tiếng</string>
+    <string name="mm_mute">Tắt tiếng</string>
+    <string name="mm_notification_permission_required_declining_call">Thiếu quyền thông báo. Đang từ chối cuộc gọi đến.</string>
+    <string name="mm_ok">Được</string>
+    <string name="mm_screen_share">Chia sẻ màn hình</string>
+    <string name="mm_screen_sharing">Chia sẻ màn hình</string>
+    <string name="mm_screen_sharing_description">Màn hình của bạn được chia sẻ</string>
+    <string name="mm_speaker">Loa</string>
+    <string name="mm_unknown">không xác định</string>
+    <string name="mm_unknown_error">Lỗi không rõ</string>
+    <string name="mm_unmute">Bật tiếng</string>
+    <string name="mm_video">Video</string>
+    <string name="mm_video_call">Cuộc gọi video</string>
+    <string name="mm_video_permission_required">Cần có sự cho phép của máy ảnh đối với các cuộc gọi điện video.</string>
+    <string name="mm_your_microphone_is_muted">Micrô của bạn bị tắt tiếng</string>
 </resources>
