--- a/infobip-rtc-ui/src/main/res/values-de/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-de/strings.xml
@@ -1,33 +1,34 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <resources>
     <string name="mm_accept">Annehmen</string>
-    <string name="mm_decline">Abfall</string>
-    <string name="mm_cancel">Absagen</string>
-    <string name="mm_ok">OK</string>
-    <string name="mm_video_call">Videoanruf</string>
-    <string name="mm_flip_camera">Kamera umdrehen</string>
-    <string name="mm_speaker">Lautsprecher</string>
-    <string name="mm_microphone">Mikrofon</string>
-    <string name="mm_screen_share">Bildschirm teilen</string>
-    <string name="mm_calls_notification_channel">Anrufe</string>
-    <string name="mm_in_call_notification_channel">Im Gespräch</string>
-    <string name="mm_is_calling">ruft an</string>
-    <string name="mm_incoming_call">Eingehender Anruf</string>
-    <string name="mm_unknown">Unbekannt</string>
-    <string name="mm_call_finished">Anruf beendet</string>
     <string name="mm_audio_permission_required">Zur Bearbeitung von Anrufen ist eine Audioberechtigung erforderlich.</string>
-    <string name="mm_call_weak_internet_connection">Ihr Netzwerk verursacht eine schlechte Anrufqualität</string>
-    <string name="mm_microphone_muted">Stummgeschaltet</string>
-    <string name="mm_unknown_error">Unbekannter Fehler</string>
-    <string name="mm_unmute">Stummschaltung aufheben</string>
-    <string name="mm_mute">Stumm</string>
-    <string name="mm_video">Video</string>
-    <string name="mm_hangup">Auflegen</string>
-    <string name="mm_video_permission_required">Für Videoanrufe ist eine Kameraerlaubnis erforderlich.</string>
-    <string name="mm_screen_sharing">Bildschirm teilen</string>
-    <string name="mm_screen_sharing_description">Ihr Bildschirm wird freigegeben</string>
-    <string name="mm_in_call">In einem Telefongesprach</string>
-    <string name="mm_notification_permission_required_declining_call">Fehlende Benachrichtigungsberechtigung. Ablehnender eingehender Anruf.</string>
+    <string name="mm_call_finished">Anruf beendet</string>
     <string name="mm_call_registration_notification_channel">Anrufregistrierung</string>
     <string name="mm_call_registration_notification_description">Benutzerdaten aktualisieren</string>
+    <string name="mm_call_weak_internet_connection">Ihr Netzwerk verursacht eine schlechte Anrufqualität</string>
+    <string name="mm_calls_notification_channel">Anrufe</string>
+    <string name="mm_cancel">Absagen</string>
+    <string name="mm_decline">Abfall</string>
+    <string name="mm_flip_camera">Kamera umdrehen</string>
+    <string name="mm_hangup">Auflegen</string>
+    <string name="mm_in_call">In einem Telefongesprach</string>
+    <string name="mm_in_call_notification_channel">Im Gespräch</string>
+    <string name="mm_incoming_call">Eingehender Anruf</string>
+    <string name="mm_is_calling">ruft an</string>
+    <string name="mm_microphone">Mikrofon</string>
+    <string name="mm_microphone_muted">Stummgeschaltet</string>
+    <string name="mm_mute">Stumm</string>
+    <string name="mm_notification_permission_required_declining_call">Fehlende Benachrichtigungsberechtigung. Ablehnender eingehender Anruf.</string>
+    <string name="mm_ok">OK</string>
+    <string name="mm_screen_share">Bildschirm teilen</string>
+    <string name="mm_screen_sharing">Bildschirm teilen</string>
+    <string name="mm_screen_sharing_description">Ihr Bildschirm wird freigegeben</string>
+    <string name="mm_speaker">Lautsprecher</string>
+    <string name="mm_unknown">Unbekannt</string>
+    <string name="mm_unknown_error">Unbekannter Fehler</string>
+    <string name="mm_unmute">Stummschaltung aufheben</string>
+    <string name="mm_video">Video</string>
+    <string name="mm_video_call">Videoanruf</string>
+    <string name="mm_video_permission_required">Für Videoanrufe ist eine Kameraerlaubnis erforderlich.</string>
     <string name="mm_your_microphone_is_muted">Ihr Mikrofon ist stummgeschaltet</string>
 </resources>
