--- a/infobip-rtc-ui/src/main/res/values-hr/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-hr/strings.xml
@@ -1,34 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <resources>
     <string name="mm_accept">Prihvati</string>
-    <string name="mm_decline">Odbaci</string>
+    <string name="mm_audio_permission_required">Za upravljanje pozivima potrebno je audiodopuštenje.</string>
+    <string name="mm_call_finished">Poziv završen</string>
+    <string name="mm_call_registration_notification_channel">Registracija poziva</string>
+    <string name="mm_call_registration_notification_description">Ažuriranje korisničkih podataka</string>
+    <string name="mm_call_weak_internet_connection">Vaša mreža uzrokuje lošu kvalitetu poziva</string>
+    <string name="mm_calls_notification_channel">Pozivi</string>
     <string name="mm_cancel">Poništi</string>
-    <string name="mm_ok">OK</string>
-    <string name="mm_video_call">video poziv</string>
+    <string name="mm_decline">Odbaci</string>
     <string name="mm_flip_camera">preklopna kamera</string>
-    <string name="mm_speaker">zvučnik</string>
+    <string name="mm_hangup">poklopi</string>
+    <string name="mm_in_call">u pozivu</string>
+    <string name="mm_in_call_notification_channel">U pozivu</string>
+    <string name="mm_incoming_call">Dolazni poziv</string>
+    <string name="mm_is_calling">zove</string>
     <string name="mm_microphone">Mikrofon</string>
+    <string name="mm_microphone_muted">prigušen</string>
+    <string name="mm_mute">utišati</string>
+    <string name="mm_notification_permission_required_declining_call">Nedostaje dozvola za obavijesti. Odbijanje dolaznog poziva.</string>
+    <string name="mm_ok">OK</string>
     <string name="mm_screen_share">Dijeljenje zaslona</string>
     <string name="mm_screen_sharing">dijeljenje zaslona</string>
     <string name="mm_screen_sharing_description">vaš zaslon je podijeljen</string>
-    <string name="mm_in_call">u pozivu</string>
-    <string name="mm_video_permission_required">Za videopozive potrebna je dozvola kamere.</string>
-    <string name="mm_hangup">poklopi</string>
-    <string name="mm_video">video</string>
-    <string name="mm_mute">utišati</string>
-    <string name="mm_unmute">isključi zvuk</string>
-    <string name="mm_unknown_error">nepoznata pogreška</string>
-    <string name="mm_microphone_muted">prigušen</string>
-    <string name="mm_call_weak_internet_connection">Vaša mreža uzrokuje lošu kvalitetu poziva</string>
-    <string name="mm_audio_permission_required">Za upravljanje pozivima potrebno je audiodopuštenje.</string>
-    <string name="mm_call_finished">Poziv završen</string>
-    <string name="mm_calls_notification_channel">Pozivi</string>
-    <string name="mm_in_call_notification_channel">U pozivu</string>
-    <string name="mm_is_calling">zove</string>
-    <string name="mm_incoming_call">Dolazni poziv</string>
+    <string name="mm_speaker">zvučnik</string>
     <string name="mm_unknown">Nepoznato</string>
-    <string name="mm_notification_permission_required_declining_call">Nedostaje dozvola za obavijesti. Odbijanje dolaznog poziva.</string>
+    <string name="mm_unknown_error">nepoznata pogreška</string>
+    <string name="mm_unmute">isključi zvuk</string>
+    <string name="mm_video">video</string>
+    <string name="mm_video_call">video poziv</string>
+    <string name="mm_video_permission_required">Za videopozive potrebna je dozvola kamere.</string>
     <string name="mm_your_microphone_is_muted">Vaš mikrofon je isključen</string>
-    <string name="mm_call_registration_notification_channel">Registracija poziva</string>
-    <string name="mm_call_registration_notification_description">Ažuriranje korisničkih podataka</string>
 </resources>
