--- a/infobip-rtc-ui/src/main/res/values-pl/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-pl/strings.xml
@@ -1,34 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <resources>
     <string name="mm_accept">Zaakceptować</string>
-    <string name="mm_decline">Spadek</string>
-    <string name="mm_cancel">Anulować</string>
-    <string name="mm_ok">Ok</string>
-    <string name="mm_video_call">Wideo rozmowa</string>
-    <string name="mm_flip_camera">Odwróć aparat</string>
-    <string name="mm_speaker">Głośnik</string>
-    <string name="mm_microphone">Mikrofon</string>
-    <string name="mm_screen_share">Udostępnianie ekranu</string>
-    <string name="mm_calls_notification_channel">Połączenia</string>
-    <string name="mm_in_call_notification_channel">W rozmowie</string>
-    <string name="mm_is_calling">dzwoni</string>
-    <string name="mm_incoming_call">Połączenie przychodzące</string>
-    <string name="mm_unknown">Nieznany</string>
-    <string name="mm_call_finished">Rozmowa zakończona</string>
     <string name="mm_audio_permission_required">Do obsługi połączeń wymagane jest zezwolenie na dźwięk.</string>
-    <string name="mm_call_weak_internet_connection">Twoja sieć powoduje niską jakość połączenia</string>
-    <string name="mm_microphone_muted">Wyciszony</string>
-    <string name="mm_unknown_error">Nieznany błąd</string>
-    <string name="mm_unmute">Wyłącz wyciszenie</string>
-    <string name="mm_mute">Niemy</string>
-    <string name="mm_video">Wideo</string>
-    <string name="mm_hangup">Rozłączenie</string>
-    <string name="mm_video_permission_required">W przypadku rozmów wideo wymagane jest pozwolenie na korzystanie z aparatu.</string>
-    <string name="mm_screen_sharing">Udostępnianie ekranu</string>
-    <string name="mm_screen_sharing_description">Twój ekran jest udostępniony</string>
-    <string name="mm_in_call">W rozmowie</string>
-    <string name="mm_notification_permission_required_declining_call">Brak uprawnień do powiadomień. Odrzucanie połączenia przychodzącego.</string>
-    <string name="mm_your_microphone_is_muted">Twój mikrofon jest wyciszony</string>
+    <string name="mm_call_finished">Rozmowa zakończona</string>
     <string name="mm_call_registration_notification_channel">Rejestracja połączeń</string>
     <string name="mm_call_registration_notification_description">Aktualizacja danych użytkownika</string>
+    <string name="mm_call_weak_internet_connection">Twoja sieć powoduje niską jakość połączenia</string>
+    <string name="mm_calls_notification_channel">Połączenia</string>
+    <string name="mm_cancel">Anulować</string>
+    <string name="mm_decline">Spadek</string>
+    <string name="mm_flip_camera">Odwróć aparat</string>
+    <string name="mm_hangup">Rozłączenie</string>
+    <string name="mm_in_call">W rozmowie</string>
+    <string name="mm_in_call_notification_channel">W rozmowie</string>
+    <string name="mm_incoming_call">Połączenie przychodzące</string>
+    <string name="mm_is_calling">dzwoni</string>
+    <string name="mm_microphone">Mikrofon</string>
+    <string name="mm_microphone_muted">Wyciszony</string>
+    <string name="mm_mute">Niemy</string>
+    <string name="mm_notification_permission_required_declining_call">Brak uprawnień do powiadomień. Odrzucanie połączenia przychodzącego.</string>
+    <string name="mm_ok">Ok</string>
+    <string name="mm_screen_share">Udostępnianie ekranu</string>
+    <string name="mm_screen_sharing">Udostępnianie ekranu</string>
+    <string name="mm_screen_sharing_description">Twój ekran jest udostępniony</string>
+    <string name="mm_speaker">Głośnik</string>
+    <string name="mm_unknown">Nieznany</string>
+    <string name="mm_unknown_error">Nieznany błąd</string>
+    <string name="mm_unmute">Wyłącz wyciszenie</string>
+    <string name="mm_video">Wideo</string>
+    <string name="mm_video_call">Wideo rozmowa</string>
+    <string name="mm_video_permission_required">W przypadku rozmów wideo wymagane jest pozwolenie na korzystanie z aparatu.</string>
+    <string name="mm_your_microphone_is_muted">Twój mikrofon jest wyciszony</string>
 </resources>
