--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="dark_mode_dark">Dark</string>
     <string name="dark_mode_light">Light</string>
     <string name="dark_mode_auto">Auto</string>
+    <string name="runtime_customization">Runtime customization</string>
 </resources>
