--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
@@ -1,51 +1,55 @@
-<resources>
-    <string name="action_registration_id_copy">Registration ID</string>
+<resources xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingTranslation">
     <string name="albanian">Shqip</string>
     <string name="arabic">العربية</string>
     <string name="bosnian">босански</string>
     <string name="chinese">繁體中文</string>
     <string name="croatian">Hrvatski</string>
-    <string name="customer_name">Customer name</string>
     <string name="danish">Dansk</string>
     <string name="english">English</string>
     <string name="french">Français</string>
-    <string name="greek">Ελληνικά</string>
     <string name="german">Deutsch</string>
+    <string name="greek">Ελληνικά</string>
     <string name="hungarian">Magyar</string>
     <string name="italian">Italiano</string>
     <string name="japanese">日本語</string>
     <string name="korean">한국어</string>
     <string name="latvian">Latviešu</string>
     <string name="lithuanian">Lietuvių</string>
-    <string name="main_activity_button_open_title">Go to chat screen</string>
-    <string name="mm_depersonalize">Depersonalize</string>
-    <string name="mm_open_chat_activity">Open chat activity</string>
-    <string name="mm_open_chat_fragment">Open chat fragment</string>
-    <string name="mm_open_chat_view">Open chat view</string>
-    <string name="mm_personalize">Personalize</string>
-    <string name="authenticate">Authenticate</string>
     <string name="polish">Polski</string>
     <string name="portuguese">Português</string>
-    <string name="push_registration_id">Push registration ID</string>
     <string name="romanian">Românește</string>
     <string name="russian">Русский</string>
+    <string name="serbian">Srpski</string>
     <string name="slovenian">Slovenščina</string>
     <string name="spanish">Español</string>
-    <string name="subject">Subject</string>
+    <string name="swedish">Svenska</string>
+    <string name="thai">Thai</string>
+    <string name="turkish">Türkçe</string>
+    <string name="ukrainian">украї́нська</string>
+
+    <string name="push_registration_id">Push registration ID</string>
+    <string name="customer_name">Customer name</string>
     <string name="subject_type">Subject type</string>
     <string-array name="subject_types">
         <item>E-mail</item>
         <item>Phone number</item>
         <item>External person ID</item>
     </string-array>
-    <string name="swedish">Svenska</string>
-    <string name="thai">Thai</string>
-    <string name="toast_registration_id_copy">Registration ID copied to clipboard</string>
-    <string name="language_changed">Language changed to %1$s</string>
-    <string name="turkish">Türkçe</string>
-    <string name="ukrainian">украї́нська</string>
+    <string name="subject">Subject</string>
+    <string name="authenticate">Authenticate</string>
+    <string name="mm_open_chat_activity">Open chat activity</string>
+    <string name="mm_open_chat_fragment">Open chat fragment</string>
+    <string name="mm_open_chat_view">Open chat view</string>
+    <string name="mm_personalize">Personalize</string>
+    <string name="mm_depersonalize">Depersonalize</string>
+    <string name="enable_calls">Enable calls</string>
+    <string name="disable_calls">Disable calls</string>
+    <string name="runtime_customization">Runtime customization</string>
     <string name="dark_mode_dark">Dark</string>
     <string name="dark_mode_light">Light</string>
     <string name="dark_mode_auto">Auto</string>
-    <string name="runtime_customization">Runtime customization</string>
+    <string name="toast_registration_id_copy">Registration ID copied to clipboard</string>
+    <string name="action_registration_id_copy">Registration ID</string>
+    <string name="language_changed">Language changed to %1$s</string>
 </resources>
