--- a/infobip-mobile-messaging-android-demo/src/chatWithCalls/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatWithCalls/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingTranslation">
     <string name="main_activity_title">Chat with calls example</string>
-    <string name="enable_calls">Enable calls</string>
-    <string name="disable_calls">Disable calls</string>
 </resources>
