Pull request #382: MCA-3165 - replace app id with push id
Merge in MML/infobip-mobile-messaging-android from jmisko-MCA-3265-webrtc_push_configuration_id to master

Squashed commit of the following:

commit 61d7e5211fcd640e0e438280f70b3324a53e5c13
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Oct 4 12:14:06 2023 +0200

    MCA-3276 Formatting fixed

commit 1b75a904e846146e9fed32220d2fc632a5c4646e
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Oct 4 10:11:58 2023 +0000

    Applied suggestion

commit ef501633ff1d4b0c8068df236b4d40a8b8815d76
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Oct 4 10:11:52 2023 +0000

    Applied suggestion

commit d633227bc0ac738eb0ec1764524aeb1c3855bb98
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Oct 4 10:11:31 2023 +0000

    Applied suggestion

commit abeb9049dcd9467247577a974a4b20a742b6b279
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Oct 3 09:18:06 2023 +0200

    MCA-3276 package name defined as namespace in build.gradle

commit f97bbaf90e5a3d8a30abd76591059a13178cca02
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Oct 3 08:43:58 2023 +0200

    MCA-3276 Added manifest for android tests in chat module

commit f64c72ed41ac32de0086e264c8b2fc227603a574
Merge: fcd19b7c 4ab17520
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Oct 2 16:19:46 2023 +0200

    Merge remote-tracking branch 'origin/master' into jmisko-MCA-3265-webrtc_push_configuration_id

    # Conflicts:
    #	infobip-rtc-ui/README.md

commit fcd19b7c3968c729ef1c67861250a556a4c566d7
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Oct 2 10:02:16 2023 +0200

    MCA-3276 PushRegId broadcast listener in demo

commit e41e72054a230a47a25892804d40af07fc4decfd
Merge: d80e9a4d 07a44d97
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Oct 2 08:28:24 2023 +0200

    Merge remote-tracking branch 'origin/master' into jmisko-MCA-3265-webrtc_push_configuration_id



--- a/infobip-rtc-ui/src/main/res/values-cs/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-cs/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">Chybí oprávnění k oznámení. Odmítam příchozí hovor.</string>
     <string name="mm_ok">OK</string>
     <string name="mm_call_registration_notification_channel">Registrace hovoru</string>
-    <string name="mm_call_registration_notification_description">Aktualizace uživatelských dat</string>
+    <string name="mm_call_registration_notification_description">Probíhá registrace hovoru</string>
     <string name="mm_screen_share">Sdílení obrazovky</string>
     <string name="mm_screen_sharing">Sdílení obrazovky</string>
     <string name="mm_screen_sharing_description">Vaše obrazovka je sdílená</string>
