--- a/infobip-rtc-ui/src/main/res/values-ko/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ko/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">알림 권한이 없습니다. 수신 전화를 거부합니다.</string>
     <string name="mm_ok">확인</string>
     <string name="mm_call_registration_notification_channel">전화 등록</string>
-    <string name="mm_call_registration_notification_description">사용자 데이터 업데이트</string>
+    <string name="mm_call_registration_notification_description">통화 등록이 진행 중입니다.</string>
     <string name="mm_screen_share">화면 공유</string>
     <string name="mm_screen_sharing">화면 공유</string>
     <string name="mm_screen_sharing_description">화면이 공유됩니다.</string>
