--- a/infobip-rtc-ui/src/main/res/values-ar/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ar/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">إذن الإعلام مفقود. رفض المكالمة الواردة.</string>
     <string name="mm_ok">حسنا</string>
     <string name="mm_call_registration_notification_channel">تسجيل المكالمات</string>
-    <string name="mm_call_registration_notification_description">تحديث بيانات المستخدم</string>
+    <string name="mm_call_registration_notification_description">تسجيل المكالمات قيد التقدم</string>
     <string name="mm_screen_share">حصة الشاشة</string>
     <string name="mm_screen_sharing">مشاركة الشاشة</string>
     <string name="mm_screen_sharing_description">شاشتك مشتركة</string>
