--- a/infobip-rtc-ui/src/main/res/values-es/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-es/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">Permiso de notificación faltante. Rechazar llamada entrante.</string>
     <string name="mm_ok">OK</string>
     <string name="mm_call_registration_notification_channel">Registro de llamadas</string>
-    <string name="mm_call_registration_notification_description">Actualización de datos de usuario</string>
+    <string name="mm_call_registration_notification_description">El registro de llamadas está en curso.</string>
     <string name="mm_screen_share">Compartir pantalla</string>
     <string name="mm_screen_sharing">Compartir pantalla</string>
     <string name="mm_screen_sharing_description">Tu pantalla es compartida</string>
