--- a/infobip-rtc-ui/src/main/res/values-fi-rFI/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-fi-rFI/strings.xml
@@ -3,7 +3,7 @@
     <string name="mm_audio_permission_required">Puheluiden käsittelyyn tarvitaan äänilupa.</string>
     <string name="mm_call_finished">Puhelu päättynyt</string>
     <string name="mm_call_registration_notification_channel">Soiton rekisteröinti</string>
-    <string name="mm_call_registration_notification_description">Päivitetään käyttäjätietoja</string>
+    <string name="mm_call_registration_notification_description">Ilmoittautuminen puheluun on käynnissä</string>
     <string name="mm_call_weak_internet_connection">Verkkosi aiheuttaa huonon puhelun laadun</string>
     <string name="mm_calls_notification_channel">Puhelut</string>
     <string name="mm_cancel">Peruuttaa</string>
