--- a/infobip-rtc-ui/src/main/res/values-hi/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-hi/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">सूचना अनुमति गुम है। आने वाली कॉल को अस्वीकार करना।</string>
     <string name="mm_ok">ठीक</string>
     <string name="mm_call_registration_notification_channel">कॉल पंजीकरण</string>
-    <string name="mm_call_registration_notification_description">उपयोगकर्ता डेटा अपडेट करना</string>
+    <string name="mm_call_registration_notification_description">कॉल पंजीकरण प्रगति पर है</string>
     <string name="mm_screen_share">स्क्रीन शेयर</string>
     <string name="mm_screen_sharing">स्क्रीन साझेदारी</string>
     <string name="mm_screen_sharing_description">आपकी स्क्रीन साझा की गई है</string>
