--- a/infobip-rtc-ui/src/main/res/values-hr/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-hr/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">Nedostaje dozvola za obavijesti. Odbijanje dolaznog poziva.</string>
     <string name="mm_ok">OK</string>
     <string name="mm_call_registration_notification_channel">Registracija poziva</string>
-    <string name="mm_call_registration_notification_description">Ažuriranje korisničkih podataka</string>
+    <string name="mm_call_registration_notification_description">Prijave poziva su u tijeku</string>
     <string name="mm_screen_share">Dijeljenje zaslona</string>
     <string name="mm_screen_sharing">dijeljenje zaslona</string>
     <string name="mm_screen_sharing_description">vaš zaslon je podijeljen</string>
