--- a/infobip-rtc-ui/src/main/res/values-hu/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-hu/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">Hiányzó értesítési engedély. Csökkenő bejövő hívás.</string>
     <string name="mm_ok">Rendben</string>
     <string name="mm_call_registration_notification_channel">Hívás regisztráció</string>
-    <string name="mm_call_registration_notification_description">Felhasználói adatok frissítése</string>
+    <string name="mm_call_registration_notification_description">A hívás regisztrációja folyamatban van</string>
     <string name="mm_screen_share">Képernyőmegosztás</string>
     <string name="mm_screen_sharing">Képernyőmegosztás</string>
     <string name="mm_screen_sharing_description">A képernyő meg van osztva</string>
