--- a/infobip-rtc-ui/src/main/res/values-it/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-it/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">Autorizzazione di notifica mancante. Chiamata in arrivo rifiutata.</string>
     <string name="mm_ok">Ok</string>
     <string name="mm_call_registration_notification_channel">Registrazione chiamata</string>
-    <string name="mm_call_registration_notification_description">Aggiornamento dati utente</string>
+    <string name="mm_call_registration_notification_description">La registrazione della chiamata è in corso</string>
     <string name="mm_screen_share">Condivisione dello schermo</string>
     <string name="mm_screen_sharing">Condivisione dello schermo</string>
     <string name="mm_screen_sharing_description">Il tuo schermo è condiviso</string>
