--- a/infobip-rtc-ui/src/main/res/values-ja/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ja/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">通知権限がありません。 着信を拒否します。</string>
     <string name="mm_ok">Ok</string>
     <string name="mm_call_registration_notification_channel">通話登録</string>
-    <string name="mm_call_registration_notification_description">ユーザーデータの更新</string>
+    <string name="mm_call_registration_notification_description">通話登録中です</string>
     <string name="mm_screen_share">画面共有</string>
     <string name="mm_screen_sharing">画面共有</string>
     <string name="mm_screen_sharing_description">あなたの画面は共有されています</string>
