--- a/infobip-rtc-ui/src/main/res/values-pl/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-pl/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">Brak uprawnień do powiadomień. Odrzucanie połączenia przychodzącego.</string>
     <string name="mm_ok">Ok</string>
     <string name="mm_call_registration_notification_channel">Rejestracja połączeń</string>
-    <string name="mm_call_registration_notification_description">Aktualizacja danych użytkownika</string>
+    <string name="mm_call_registration_notification_description">Trwa rejestracja rozmów</string>
     <string name="mm_screen_share">Udostępnianie ekranu</string>
     <string name="mm_screen_sharing">Udostępnianie ekranu</string>
     <string name="mm_screen_sharing_description">Twój ekran jest udostępniony</string>
