--- a/infobip-rtc-ui/src/main/res/values-pt/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-pt/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">Permissão de notificação ausente. Recusando chamada recebida.</string>
     <string name="mm_ok">OK</string>
     <string name="mm_call_registration_notification_channel">Registro de chamadas</string>
-    <string name="mm_call_registration_notification_description">Atualizando dados do usuário</string>
+    <string name="mm_call_registration_notification_description">O registro da chamada está em andamento</string>
     <string name="mm_screen_share">Compartilhamento de tela</string>
     <string name="mm_screen_sharing">Compartilhamento de tela</string>
     <string name="mm_screen_sharing_description">Sua tela é compartilhada</string>
