--- a/infobip-rtc-ui/src/main/res/values-sk/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-sk/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">Chýbajúce povolenie notifikácii. Odmietam prichádzajúci hovor.</string>
     <string name="mm_ok">Ok</string>
     <string name="mm_call_registration_notification_channel">Registrácia hovoru</string>
-    <string name="mm_call_registration_notification_description">Aktualizácia používateľských údajov</string>
+    <string name="mm_call_registration_notification_description">Prebieha registrácia hovoru</string>
     <string name="mm_screen_share">Zdieľanie obrazovky</string>
     <string name="mm_screen_sharing">Zdieľanie obrazovky</string>
     <string name="mm_screen_sharing_description">Vaša obrazovka je zdieľaná</string>
