--- a/infobip-rtc-ui/src/main/res/values-sv/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-sv/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">Aviseringsbehörighet saknas. Avvisar inkommande samtal.</string>
     <string name="mm_ok">Ok</string>
     <string name="mm_call_registration_notification_channel">Ring registrering</string>
-    <string name="mm_call_registration_notification_description">Uppdaterar användardata</string>
+    <string name="mm_call_registration_notification_description">Samtalsregistrering pågår</string>
     <string name="mm_screen_share">Skärmdelning</string>
     <string name="mm_screen_sharing">Skärmdelning</string>
     <string name="mm_screen_sharing_description">Din skärm är delad</string>
