--- a/infobip-rtc-ui/src/main/res/values-th/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-th/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">ไม่มีสิทธิ์การแจ้งเตือน ปฏิเสธสายเรียกเข้า</string>
     <string name="mm_ok">ตกลง</string>
     <string name="mm_call_registration_notification_channel">โทรลงทะเบียน</string>
-    <string name="mm_call_registration_notification_description">กำลังอัปเดตข้อมูลผู้ใช้</string>
+    <string name="mm_call_registration_notification_description">อยู่ระหว่างการลงทะเบียนการโทร</string>
     <string name="mm_screen_share">แชร์หน้าจอ</string>
     <string name="mm_screen_sharing">การแชร์หน้าจอ</string>
     <string name="mm_screen_sharing_description">หน้าจอของคุณถูกแชร์</string>
