--- a/infobip-rtc-ui/src/main/res/values-uk/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-uk/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">Відсутній дозвіл на сповіщення. Відхилення вхідного дзвінка.</string>
     <string name="mm_ok">В порядку</string>
     <string name="mm_call_registration_notification_channel">Реєстрація дзвінка</string>
-    <string name="mm_call_registration_notification_description">Оновлення даних користувача</string>
+    <string name="mm_call_registration_notification_description">Триває реєстрація дзвінків</string>
     <string name="mm_screen_share">Показ екрана</string>
     <string name="mm_screen_sharing">Спільне використання екрана</string>
     <string name="mm_screen_sharing_description">Ваш екран спільний</string>
