--- a/infobip-rtc-ui/src/main/res/values-vi/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-vi/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">Thiếu quyền thông báo. Đang từ chối cuộc gọi đến.</string>
     <string name="mm_ok">Được</string>
     <string name="mm_call_registration_notification_channel">đăng ký cuộc gọi</string>
-    <string name="mm_call_registration_notification_description">Cập nhật dữ liệu người dùng</string>
+    <string name="mm_call_registration_notification_description">Đang tiến hành đăng ký cuộc gọi</string>
     <string name="mm_screen_share">Chia sẻ màn hình</string>
     <string name="mm_screen_sharing">Chia sẻ màn hình</string>
     <string name="mm_screen_sharing_description">Màn hình của bạn được chia sẻ</string>
