--- a/infobip-rtc-ui/src/main/res/values-zh-rCN/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-zh-rCN/strings.xml
@@ -15,7 +15,7 @@
     <string name="mm_notification_permission_required_declining_call">缺少通知權限。 拒絕來電。</string>
     <string name="mm_ok">确认</string>
     <string name="mm_call_registration_notification_channel">来电登记</string>
-    <string name="mm_call_registration_notification_description">更新用户数据</string>
+    <string name="mm_call_registration_notification_description">来电登记正在进行中</string>
     <string name="mm_screen_share">屏幕共享</string>
     <string name="mm_screen_sharing">屏幕共享</string>
     <string name="mm_screen_sharing_description">您的屏幕已共享</string>
