--- a/infobip-rtc-ui/src/main/res/values-zh-rHK/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-zh-rHK/strings.xml
@@ -3,7 +3,7 @@
     <string name="mm_audio_permission_required">處理呼叫需要音頻權限。</string>
     <string name="mm_call_finished">通話結束</string>
     <string name="mm_call_registration_notification_channel">來電登記</string>
-    <string name="mm_call_registration_notification_description">更新用戶數據</string>
+    <string name="mm_call_registration_notification_description">來電登記正在進行中</string>
     <string name="mm_call_weak_internet_connection">您的網絡導致通話質量不佳</string>
     <string name="mm_calls_notification_channel">來電</string>
     <string name="mm_cancel">取消</string>
