--- a/infobip-rtc-ui/src/main/res/values-zh-rSG/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-zh-rSG/strings.xml
@@ -3,7 +3,7 @@
     <string name="mm_audio_permission_required">处理呼叫需要音频权限。</string>
     <string name="mm_call_finished">通话结束</string>
     <string name="mm_call_registration_notification_channel">來電登記</string>
-    <string name="mm_call_registration_notification_description">更新用戶數據</string>
+    <string name="mm_call_registration_notification_description">来电登记正在进行中</string>
     <string name="mm_call_weak_internet_connection">您的網絡導致通話質量不佳</string>
     <string name="mm_calls_notification_channel">来电</string>
     <string name="mm_cancel">取消</string>
