Pull request #385: Mtokar MCA-3216 rtc ui design update
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-3216_rtc_ui_design_update to master

Squashed commit of the following:

commit fae1b4073ebf4e6c7d43aec61921f127faad970e
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Oct 11 15:00:16 2023 +0200

    renaming

commit 26389b14d9b95dbebfe340c7fbd0c406f6cad3e1
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Oct 11 10:48:43 2023 +0200

    renaming
    switches visibility

commit b3ddfe39d1dcc2ac56cc1887e59105a33a62436b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Oct 11 08:45:31 2023 +0000

    Applied suggestion

commit 73edc7ecf730b0a37adb5bebcbcb1f26e66df2b3
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Oct 10 10:11:43 2023 +0200

    renaming screen sharing variables for better readability

commit 9cd40ed8cbcb01138f9eab9815335e5dfe3dd4f5
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Mon Oct 9 18:56:31 2023 +0200

    screensharing bugs

commit 00d9e6f77ea32505362f78993d6ae83dd3abbffb
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Mon Oct 9 17:21:58 2023 +0200

    sink removal refactor

commit bb862d712b8618029120203ffa2ef1d7e5015a3c
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Mon Oct 9 15:28:02 2023 +0200

    wip

commit 8c2c6e39cd9f9734cfab9a5fcac08a8c2fb0845b
Merge: 71afc0e3 64f8f15c
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Mon Oct 9 15:08:52 2023 +0200

    Merge remote-tracking branch 'origin/mtokar-MCA-3216_rtc_ui_design_update' into mtokar-MCA-3216_rtc_ui_design_update

commit 64f8f15cc240f2ec83920f17aa1b04ffa6d3bd3b
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Sun Oct 8 16:50:48 2023 +0000

    Applied suggestion

commit 540af7d87b9c73ddda9bf8141149f88375e918b8
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Sun Oct 8 16:50:42 2023 +0000

    Applied suggestion

commit 71afc0e33e97f1ae7251fd473809088237c9010c
Author: Matuš Tokar <Matus.Tokar@

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
@@ -52,4 +52,6 @@
     <string name="toast_registration_id_copy">Registration ID copied to clipboard</string>
     <string name="action_registration_id_copy">Registration ID</string>
     <string name="language_changed">Language changed to %1$s</string>
+    <string name="custom_button_checked">Custom button checked</string>
+    <string name="custom_button_enabled">Custom button enabled</string>
 </resources>
