--- a/infobip-rtc-ui/src/main/res/values/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="mm_video_call">Video call</string>
     <string name="mm_video_permission_required">Camera permission is required for video calls.</string>
     <string name="mm_your_microphone_is_muted">Your microphone is muted</string>
+    <string name="mm_you_are_sharing_a_screen">You are sharing a screen.</string>
+    <string name="mm_stop_sharing_screen"><u>Stop sharing screen</u></string>
 </resources>
